--- a/src/main/webapp/src/styles.scss
+++ b/src/main/webapp/src/styles.scss
@@ -1,4 +1,4 @@
 $icon-font-path: '../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
-@import '_variables';
+@import 'variables';
 @import '../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap';
-@import '_bootswatch';
+@import 'bootswatch';
