--- a/src/main/webapp/src/app/home/home.component.html
+++ b/src/main/webapp/src/app/home/home.component.html
@@ -1,6 +1,40 @@
-
 <div class="container">
+  <div class="h1 text-center">Бронювання турів онлайн</div>
+  <div class="well">
+    <div class="row">
+      <span class="col-md-2">Куди їдемо</span>
+      <span class="col-md-2">Звідки відправляємось</span>
+      <span class="col-md-2">Початок туру</span>
+      <span class="col-md-2">Тривалість туру</span>
+      <span class="col-md-2">Кількість осіб</span>
+      <span class="btn btn-success">Знайти тури</span>
+    </div>
+    <div class="row">
+      <span class="col-md-2">
+        <div class="btn-group">
+          <button type="button" class="btn btn-default">Куди їдемо</button>
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </div>
+      </span>
+      <span class="col-md-2"></span>
+      <span class="col-md-2"></span>
+      <span class="col-md-2"></span>
+      <span class="col-md-2"></span>
+      <span class="col-md-2"></span>
+    </div>
+  </div>
   <div class="row">
+    <button class="btn btn-info" routerLink="tours">Переглянути тури</button>
     <button class="btn btn-info" routerLink="rooms">Переглянути кімнати</button>
   </div>
 </div>
