files serving through java controller

--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -39,3 +39,7 @@
 <div class="container" style="margin-top: 75px">
   <router-outlet></router-outlet>
 </div>
+<br>
+<div class="container">
+  <img class="img-responsive img-rounded" src="{{img_src}}/1.png">
+</div>
