--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -36,8 +36,10 @@
   </div>
 </nav>
 
-<div class="container" style="margin-top: 75px">
-  <router-outlet></router-outlet>
+<div class="container-fluid" style="background-image:url('../assets/images/background.jpg'); background-size:cover; height: 1200px;">
+  <div class="container" style="margin-top: 75px">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 <br>
 <div class="container">
