--- a/src/main/webapp/src/app/home/home.component.html
+++ b/src/main/webapp/src/app/home/home.component.html
@@ -6,102 +6,69 @@
   </div>
 </div>
 
-<div class="container" style="margin-top: 150px">
+<div class="container" style="margin-top: 100px">
   <div class="h1 text-center" style="font-size: 60pt">Тури в сільській місцевості</div>
   <div class="h2 text-center">Бронювання онлайн</div>
 
   <div class="well">
-
     <div class="row">
-      <span class="col-md-2"><b>Куди їдемо</b></span>
-      <span class="col-md-2"><b>Звідки відправляємось</b></span>
-      <span class="col-md-2"><b>Початок туру</b></span>
-      <span class="col-md-2"><b>Тривалість туру</b></span>
-      <span class="col-md-2"><b>Кількість осіб</b></span>
-      <span class="btn btn-success"><b>Знайти тури</b></span>
-    </div>
+      <div class="col-md-10">
+        <div class="row">
+          <span class="col-md-3"><b>Куди їдемо</b></span>
+          <span class="col-md-3"><b>Початок туру</b></span>
+          <span class="col-md-3"><b>Кінець туру</b></span>
+          <span class="col-md-3"><b>Кількість осіб</b></span>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="date-cell"></div>
+            <div class="dropdown" dropdown [dropdownToggle]="false">
+              <div class="btn-group">
+                <button class="btn btn-default" dropdown-open>{{dropdownTittle}}</button>
+                <ul class="dropdown-menu">
+                  <li *ngFor="let place of places" (click)="dropdownTittle = place.name"><a>{{place.name}}</a></li>
+                </ul>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                  <span class="caret"></span>
+                </button>
+              </div>
+            </div>
+          </div>
 
-    <div class="row">
-      <span class="col-md-2">
-        <div class="dropdown" dropdown [dropdownToggle]="false">
-          <div class="btn-group">
-            <button class="btn btn-default" dropdown-open>{{dropdownTittle}}</button>
-            <ul class="dropdown-menu">
-              <li *ngFor="let place of places" (click)="dropdownTittle = place.name"><a>{{place.name}}</a></li>
-            </ul>
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-              <span class="caret"></span>
-            </button>
+          <div class="col-md-3">
+            <ng2-datepicker [(ngModel)]="dateStart"></ng2-datepicker>
+          </div>
+
+          <div class="col-md-3">
+            <ng2-datepicker [(ngModel)]="dateFinish"></ng2-datepicker>
+          </div>
+
+          <div class="col-md-3">
+            <div class="btn-group">
+              <button type="button" class="btn btn-default">Кількість осіб</button>
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li><a href="#">6</a></li>
+                <li><a href="#">7</a></li>
+              </ul>
+            </div>
           </div>
         </div>
-      </span>
+      </div>
 
-      <span class="col-md-2">
-        <div class="btn-group">
-          <button type="button" class="btn btn-default">Оберіть країну</button>
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="caret"></span>
-            <span class="sr-only">Toggle Dropdown</span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
+      <div class="col-md-2">
+        <div class="row" style="line-height: 600%">
+          <span class="btn btn-success"><b>Знайти тури</b></span>
         </div>
-      </span>
-      <span class="col-md-2">
-        <div class="btn-group">
-          <button type="button" class="btn btn-default">Оберіть дату</button>
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="caret"></span>
-            <span class="sr-only">Toggle Dropdown</span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </div>
-      </span>
-      <span class="col-md-2">
-        <div class="btn-group">
-          <button type="button" class="btn btn-default">Кількість днів</button>
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="caret"></span>
-            <span class="sr-only">Toggle Dropdown</span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </div>
-      </span>
-      <span class="col-md-2">
-        <div class="btn-group">
-          <button type="button" class="btn btn-default">Кількість осіб</button>
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">6</a></li>
-            <li><a href="#">7</a></li>
-          </ul>
-        </div>
-      </span>
-      <span class="col-md-2"></span>
+      </div>
+
     </div>
   </div>
 
