--- a/src/main/webapp/src/app/home/home.component.html
+++ b/src/main/webapp/src/app/home/home.component.html
@@ -40,46 +40,41 @@
           </div>
 
           <div class="col-md-3">
-            <div class="btn-group">
-              <button type="button" class="btn btn-default">Кількість днів</button>
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">6</a></li>
-                <li><a href="#">7</a></li>
-              </ul>
+            <div class="date-cell"></div>
+            <div class="dropdown" dropdown [dropdownToggle]="false">
+              <div class="btn-group">
+                <button class="btn btn-default" dropdown-open>{{day}}</button>
+                <ul class="dropdown-menu">
+                  <li *ngFor="let dc of dayCount" (click)="day = dc"><a>{{dc}}</a></li>
+                </ul>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                  <span class="caret"></span>
+                </button>
+              </div>
             </div>
           </div>
 
           <div class="col-md-3">
-            <div class="btn-group">
-              <button type="button" class="btn btn-default">Кількість осіб</button>
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">6</a></li>
-                <li><a href="#">7</a></li>
-              </ul>
+            <div class="date-cell"></div>
+            <div class="dropdown" dropdown [dropdownToggle]="false">
+              <div class="btn-group">
+                <button class="btn btn-default" dropdown-open>{{person}}</button>
+                <ul class="dropdown-menu">
+                  <li *ngFor="let pc of personCount" (click)="person = pc"><a>{{pc}}</a></li>
+                </ul>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                  <span class="caret"></span>
+                </button>
+              </div>
             </div>
           </div>
+
         </div>
       </div>
 
       <div class="col-md-2">
         <div class="row" style="line-height: 600%">
-          <span class="btn btn-success"><b>Знайти тури</b></span>
+          <span class="btn btn-success" routerLink="houses"><b>Знайти тури</b></span>
         </div>
       </div>
 
