--- a/src/main/webapp/src/app/house/house.component.html
+++ b/src/main/webapp/src/app/house/house.component.html
@@ -6,23 +6,54 @@
   </button>
 </h1>
 
-<table class="table table-striped">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Type</th>
-    <th>Address</th>
-    <th>Description</th>
-    <th>Proto</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let house of houses | async">
-    <td>{{house.name}}</td>
-    <td>{{house.type}}</td>
-    <td>{{house.address}}</td>
-    <td>{{house.description}}</td>
-    <td>{{house.photo}}</td>
-  </tr>
-  </tbody>
-</table>
+<div class="row">
+  <div class="col-xs-3">
+    <form [formGroup]="searchForm">
+      <div class="form-group">
+        <label for="type">Name</label>
+        <select id="type" class="form-control" formControlName="type">
+          <option value=""></option>
+          <option *ngFor="let type of types" [value]="type">
+            {{type}}
+          </option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" class="form-control" formControlName="name">
+      </div>
+      <div class="form-group">
+        <label for="address">Address</label>
+        <input type="text" id="address" class="form-control" formControlName="address">
+      </div>
+      <div class="form-group">
+        <button type="button" class="form-control btn btn-primary btn-block" (click)="search()">
+          Search
+        </button>
+      </div>
+    </form>
+  </div>
+  <div class="col-xs-9">
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Type</th>
+        <th>Address</th>
+        <th>Description</th>
+        <th>Proto</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let house of houses | async">
+        <td>{{house.name}}</td>
+        <td>{{house.type}}</td>
+        <td>{{house.address}}</td>
+        <td>{{house.description}}</td>
+        <td>{{house.photo}}</td>
+      </tr>
+      </tbody>
+    </table>
+
+  </div>
+</div>
