add house details page

--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -9,8 +9,9 @@
   <div class="navbar-collapse collapse navbar-inverse" id="bs-example-navbar-collapse-1" aria-expanded="false">
     <ul class="nav navbar-nav fixed">
       <li class="active"><a href="#">Пошук турів <span class="sr-only">(current)</span></a></li>
-      <li><a href="#">Гарячі тури</a></li>
-      <li><a href="#">Замовити тур</a></li>
+      <li><a href="#">Куди поїхати</a></li>
+      <li><a href="#">Як замовити</a></li>
+      <li><a href="#">Контакти</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Випадайка <span
           class="caret"></span></a>
