--- a/src/main/webapp/src/app/house/house.component.html
+++ b/src/main/webapp/src/app/house/house.component.html
@@ -34,7 +34,7 @@
     </form>
   </div>
   <div class="col-xs-9">
-    <table class="table table-striped">
+    <table class="table table-striped" style="cursor: pointer">
       <thead>
       <tr>
         <th>Name</th>
@@ -45,7 +45,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let house of houses | async">
+      <tr *ngFor="let house of houses | async" routerLink="{{house.id}}">
         <td>{{house.name}}</td>
         <td>{{house.type}}</td>
         <td>{{house.address}}</td>
