--- a/src/main/webapp/src/app/room/room.details.html
+++ b/src/main/webapp/src/app/room/room.details.html
@@ -14,31 +14,28 @@
     <div class="col-md-6">
       <table class="table">
         <thead>
-          <tr>
-            <th colspan="2">{{house.name}}</th>
-          </tr>
+        <tr>
+          <th colspan="2">{{room.name}}</th>
+        </tr>
         </thead>
         <tbody>
           <tr>
-            <td style="font-weight: bold">Тип будинку</td>
-            <td>{{house.type}}</td>
+            <td style="font-weight: bold">Тип кімнати</td>
+            <td>{{room.type}}</td>
           </tr>
           <tr>
-            <td style="font-weight: bold">Адреса</td>
-            <td>{{house.address}}</td>
+            <td style="font-weight: bold">Ціна</td>
+            <td>{{room.price}}</td>
           </tr>
           <tr>
-            <td style="font-weight: bold">Опис</td>
-            <td>{{house.description}}</td>
+            <td style="font-weight: bold">Кількість місць</td>
+            <td>{{room.placeCount}}</td>
           </tr>
         </tbody>
       </table>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-8">
-      <app-room></app-room>
+      <div class="row">
+        <button class="btn btn-info pull-right" routerLink="rooms">Забронювати</button>
+      </div>
     </div>
   </div>
 </div>
