--- a/src/main/webapp/src/app/room/room.component.html
+++ b/src/main/webapp/src/app/room/room.component.html
@@ -5,7 +5,7 @@
 <table class="table table-striped">
   <thead>
   <tr>
-    <th>Photo</th>
+    <th>Фото</th>
     <th>Тип</th>
     <th>Ціна</th>
     <th>Кількість місць</th>
