--- a/src/main/webapp/src/app/room/room.details.html
+++ b/src/main/webapp/src/app/room/room.details.html
@@ -33,9 +33,26 @@
           </tr>
         </tbody>
       </table>
-      <div class="row">
-        <button class="btn btn-info pull-right" routerLink="rooms">Забронювати</button>
-      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-8">
+      <app-login></app-login>
     </div>
   </div>
 </div>
+
+<router-outlet></router-outlet>
+
+<button class="btn btn-danger pull-right" (click)="openPopup()">
+  Кнопка
+</button>
+
+<ng2-popup #popup></ng2-popup>
+
+
+<script>
+  $(document.body).append(form);
+  document.body.appendChild(form);
+</script>
