--- a/src/main/webapp/src/app/login/login.component.html
+++ b/src/main/webapp/src/app/login/login.component.html
@@ -12,7 +12,7 @@
         <input type="text" name="name" placeholder="Ім'я">
         <input type="text" name="surname" placeholder="Прізвище">
         <input type="text" name="phone" placeholder="Номер телефону">
-        <input type="submit" name="login" class="login loginmodal-submit" value="Гаразд" (click)="submitForm()" data-toggle="modal" data-target="#login-modal">
+        <input type="submit" name="login" class="login loginmodal-submit" value="Гаразд" (click)="submitForm()" data-dismiss="modal">
       </form>
     </div>
   </div>
