--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -8,23 +8,22 @@
 
   <div class="navbar-collapse collapse navbar-inverse" id="bs-example-navbar-collapse-1" aria-expanded="false">
     <ul class="nav navbar-nav fixed">
-      <li class="active"><a href="#">Пошук турів <span class="sr-only">(current)</span></a></li>
-      <li><a href="#">Куди поїхати</a></li>
-      <li><a href="#">Як замовити</a></li>
-      <li><a href="#">Контакти</a></li>
+      <li routerLinkActive="active"><a routerLink="home">Пошук турів</a></li>
+      <li routerLinkActive="active"><a routerLink="places">Куди поїхати</a></li>
+      <li routerLinkActive="active"><a>Як замовити</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Випадайка <span
           class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
+          <li><a routerLink="houses">Наявні будинки</a></li>
+          <li><a routerLink="rooms">Наявні кімнати</a></li>
           <li class="divider"></li>
-          <li><a href="#">Separated link</a></li>
+          <li><a routerLink="reservations">Обрані резервації</a></li>
           <li class="divider"></li>
-          <li><a href="#">One more separated link</a></li>
+          <li><a routerLink="houses">Перейти до пошуку</a></li>
         </ul>
       </li>
+      <li routerLinkActive="active"><a routerLink="contact">Контакти</a></li>
     </ul>
 
     <form class="navbar-form pull-right" role="search">
