--- a/src/main/webapp/src/app/place/place.component.html
+++ b/src/main/webapp/src/app/place/place.component.html
@@ -9,14 +9,21 @@
 <table class="table table-striped">
   <thead>
   <tr>
-    <th>Name</th>
-    <th>Description</th>
+    <th>Фото</th>
+    <th>Назва</th>
+    <th>Опис</th>
+    <th></th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let place of places | async">
+    <td><img class="img-responsive img-rounded" src="{{img_src}}/1.png" style="height: 100px; width: 100px"></td>
+    <td>{{place.photo}}</td>
     <td>{{place.name}}</td>
     <td>{{place.description}}</td>
+    <td>
+      <button class="btn btn-info pull-right" routerLink="{{place.id}}">Переглянути</button>
+    </td>
   </tr>
   </tbody>
 </table>
