--- a/src/main/webapp/src/app/contact/contact.component.html
+++ b/src/main/webapp/src/app/contact/contact.component.html
@@ -6,49 +6,20 @@
   </button>
 </h1>
 
-<table class="table">
-  <thead>
-  <tr>
-    <th>
-      Інформація про розробника
-    </th>
-  </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>
-        Харабарук Наталія Романівна
-      </td>
-    </tr>
-    <tr>
-      <td>
-        Студентка ВПМ-11
-      </td>
-    </tr>
-    <tr>
-      <td>
-        Інститут комп'ютерних наук та інформаційних технологій
-      </td>
-    </tr>
-    <tr>
-      <td>
-        Кафедра інформаційних технологій видавничої справи
-      </td>
-    </tr>
-    <tr>
-      <td>
-        Комп`ютеризовані засоби та технології інформаційно-видавничих систем
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <b>Викладач:</b> Кинаш Юрій Євстахович
-      </td>
-    </tr>
-    <tr>
-      <td>
+<div class="col-md-10">
+  <div class="panel panel-success">
+    <div class="panel-heading">Інформація про розробника</div>
+    <ul class="list-group">
+      <li class="list-group-item"><b>Харабарук Наталія Романівна</b></li>
+      <li class="list-group-item">Студентка ВПМ-11</li>
+      <li class="list-group-item">Інститут комп'ютерних наук та інформаційних технологій</li>
+      <li class="list-group-item">Кафедра інформаційних технологій видавничої справи</li>
+      <li class="list-group-item">Комп`ютеризовані засоби та технології інформаційно-видавничих систем</li>
+      <li class="list-group-item"><b>Викладач:</b> Кинаш Юрій Євстахович</li>
+      <li class="list-group-item">
         <b>Використані технології:</b> Java 8, Spring Boot, Spring Data REST, Angular 4, Bootstrap, MySQL, Lombok
-      </td>
-    </tr>
-  </tbody>
-</table>
+      </li>
+    </ul>
+  </div>
+
+  </div>
