--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -10,9 +10,8 @@
     <ul class="nav navbar-nav fixed">
       <li routerLinkActive="active"><a routerLink="home">Пошук турів</a></li>
       <li routerLinkActive="active"><a routerLink="places">Куди поїхати</a></li>
-      <li routerLinkActive="active"><a>Як замовити</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Випадайка <span
+      <li routerLinkActive="active" class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Переглянути <span
           class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
           <li><a routerLink="houses">Наявні будинки</a></li>
@@ -40,8 +39,4 @@
   <div class="container" style="margin-top: 75px">
     <router-outlet></router-outlet>
   </div>
-</div>
-<br>
-<div class="container">
-  <img class="img-responsive img-rounded" src="{{img_src}}/1.png">
 </div>
