--- a/src/main/webapp/src/app/house/house.component.html
+++ b/src/main/webapp/src/app/house/house.component.html
@@ -10,50 +10,50 @@
   <div class="col-xs-3">
     <form [formGroup]="searchForm">
       <div class="form-group">
-        <label for="type">Name</label>
-        <select id="type" class="form-control" formControlName="type">
-          <option value=""></option>
-          <option *ngFor="let type of types" [value]="type">
-            {{type}}
-          </option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="name">Name</label>
+        <label for="name">Назва</label>
         <input type="text" id="name" class="form-control" formControlName="name">
       </div>
       <div class="form-group">
-        <label for="address">Address</label>
-        <input type="text" id="address" class="form-control" formControlName="address">
+        <label for="address">Населений пункт</label>
+        <input type="text" id="address" class="form-control" formControlName="village">
+      </div>
+      <label>Типи</label>
+      <div *ngFor="let type of types">
+        <input type="checkbox" [checked]="type.selected" (click)="select(type)">
+        {{type.value}}
       </div>
       <div class="form-group">
         <button type="button" class="form-control btn btn-primary btn-block" (click)="search()">
-          Search
+          Шукати
+        </button>
+      </div>
+      <div class="form-group">
+        <button type="button" class="form-control btn btn-danger btn-block" (click)="reset()">
+          Скинути
         </button>
       </div>
     </form>
   </div>
   <div class="col-xs-9">
-    <table class="table table-striped" style="cursor: pointer">
+    <table class="table table-striped">
       <thead>
-      <tr>
-        <th>Name</th>
-        <th>Type</th>
-        <th>Address</th>
-        <th>Description</th>
-        <th>Proto</th>
-      </tr>
+        <tr>
+          <th></th>
+          <th>Назва</th>
+          <th>Тип</th>
+          <th>Адреса</th>
+          <th>Опис</th>
+        </tr>
       </thead>
-      <tbody>
-      <tr *ngFor="let house of houses | async" routerLink="{{house.id}}">
-        <td>{{house.id + ' ' + house.name}}</td>
+      <tbody></tbody>
+      <tr *ngFor="let house of houses | async" routerLink="{{house.id}}" style="cursor: pointer">
+        <td><img class="img-responsive img-rounded" src="{{img_src}}/1.png" style="height: 100px; width: 100px"></td>
+        <td>{{house.name}}</td>
         <td>{{house.type}}</td>
         <td>{{house.address}}</td>
         <td>{{house.description}}</td>
-        <td>{{house.photo}}</td>
       </tr>
       </tbody>
     </table>
-
   </div>
 </div>
