--- a/src/main/webapp/src/app/place/place.component.html
+++ b/src/main/webapp/src/app/place/place.component.html
@@ -17,7 +17,7 @@
   </thead>
   <tbody>
   <tr *ngFor="let place of places | async">
-    <td><img class="img-responsive img-rounded" src="{{img_src}}/1.png" style="height: 100px; width: 100px"></td>
+    <td><img class="img-responsive img-rounded" src="{{img_src}}/{{place.photo}}" style="max-width: 250px"></td>
     <td>{{place.photo}}</td>
     <td>{{place.name}}</td>
     <td>{{place.description}}</td>
