--- a/src/main/webapp/src/app/house/house.details.html
+++ b/src/main/webapp/src/app/house/house.details.html
@@ -8,8 +8,8 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-5" style="height:400px; border: 2px solid black">
-      <img class="img-responsive img-rounded" src="{{img_src}}/1.png">
+    <div class="col-md-5" style="max-width: 550px">
+      <img class="img-responsive img-rounded" src="{{img_src}}/{{house.photo}}">
     </div>
     <div class="col-md-6">
       <table class="table">
